--- a/myStyle.css
+++ b/myStyle.css
@@ -180,7 +180,7 @@ nav a {
   position: absolute;
   z-index: 10;
   top: 520px;
-  left: 500px;
+  left: 30%;
   font-family: "Noto Sans", sans-serif;
   text-align: center;
   line-height: 1.3;
@@ -1217,3 +1217,4 @@ footer {
   order: 3;
   text-align: right;
 }
+
